Fix GitHub icon invisible in dark mode
The icon used $github-color (#171516, near-black) which was invisible
against the dark background. Override to light gray in dark theme.

--- a/_sass/_dark-mode.scss
+++ b/_sass/_dark-mode.scss
@@ -162,6 +162,13 @@
     }
   }
 
+  /* ---- Social icons (sidebar) ---- */
+  .social-icons .fa-github,
+  .social-icons .fa-github-alt,
+  .social-icons .fa-github-square {
+    color: #e0e0e0;
+  }
+
   /* ---- TOC ---- */
   .toc {
     background-color: #1e1e1e;
